Избавился от таблицы File
