# Storage.Api/Handlers/File/DownloadFileHandler.cs
@@ -1,4 +1,5 @@
-﻿using JetBrains.Annotations;
+﻿using System.Globalization;
+using JetBrains.Annotations;
 using Microsoft.AspNetCore.Http.HttpResults;
 using Microsoft.AspNetCore.Mvc;
 using Microsoft.Extensions.Options;
@@ -20,38 +21,37 @@ internal class DownloadFileHandler : IEndpointHandler
     public static IEndpointConventionBuilder[] ConfigureEndpoint(IEndpointRouteBuilder builder) =>
     [
         builder
-            .MapGet("/file/{bucketId}/{**filePath}", DownloadFileAsync)
+            .MapGet("/file/{fileKey}", DownloadFileAsync)
             .DisableAntiforgery()
             .WithName("DownloadFile")
             .WithTags("File")
     ];
 
     /// <summary>Скачивание файла из хранилища.</summary>
-    /// <param name="bucketId">Идентификатор корзины.</param>
-    /// <param name="filePath">Путь к файлу в корзине.</param>
+    /// <param name="fileKey">Ключ файла.</param>
     private static async Task<FileStreamHttpResult> DownloadFileAsync(
-        [FromRoute] string bucketId,
-        [FromRoute] string filePath,
+        [FromRoute] string fileKey,
         [FromServices] IOptions<StorageOptions> options,
         [FromServices] ILogger<GetBucketsHandler> logger,
         [FromServices] IClusterDataAccess clusterDataAccess,
         [FromServices] INodeStorage nodeStorage,
         CancellationToken token)
     {
-        filePath = Uri.UnescapeDataString(filePath).Replace("\\", "/");
-        var fileName = Path.GetFileName(filePath);
+        var keyParts = fileKey.Split(':');
+        var nodeName = keyParts[0];
+        var bucketName = keyParts[1];
+        var partNumber = int.Parse(keyParts[2], CultureInfo.InvariantCulture);
+        var partOffset = long.Parse(keyParts[3], CultureInfo.InvariantCulture);
 
-        var file = await clusterDataAccess.GetFileAsync(bucketId, filePath, token);
-        if (file == null)
-            throw new BucketFileNotFoundException(bucketId, filePath);
-
-        if (file.NodeId != options.Value.NodeName)
+        if (nodeName != options.Value.NodeName)
             throw new FeatureNotImplementedException("Переадресация на другую ноду.");
 
-        var bucketStorage = nodeStorage.GetOrCreateBucket(file.BucketId);
-        var data = bucketStorage.Read(file.Location);
+        var location = new DataLocation(bucketName, partNumber, partOffset);
+
+        var bucketStorage = nodeStorage.GetOrCreateBucket(bucketName);
+        var data = bucketStorage.Read(location);
         var ms = new MemoryStream(data);
 
-        return TypedResults.Stream(ms, fileDownloadName: fileName);
+        return TypedResults.Stream(ms);
     }
 }
